--- a/src/introduction.adoc
+++ b/src/introduction.adoc
@@ -4,7 +4,7 @@
 |link:https://github.com/heliconialabs/abapgit-flow[https://github.com/heliconialabs/abapgit-flow]
 
 |License
-|link:https://github.com/heliconialabs/abapgit-flow/blob/main/LICENSE[Creative Commons Attribution 4.0 International]
+|Copyright Heliconia Labs 2023
 
 |Build
 |{docdatetime}
@@ -12,9 +12,7 @@
 
 == Introduction
 
-Change based deployment, when quality assurance for a change is finished it can be deployed, ie. no sequence required.
-
-Trunk based
+feature based deployment, when quality assurance for a change is finished it can be deployed, ie. no sequence required.
 
 Supported by tooling end to end
 
@@ -27,5 +25,9 @@ Flexible repository setup/split
 Classic on-prem development
 
 Modular monolith
+
+editor independent
+
+AI ready
 
 https://docs.github.com/en/get-started/quickstart/github-flow
