--- a/src/introduction.adoc
+++ b/src/introduction.adoc
@@ -31,3 +31,7 @@ editor independent
 AI ready
 
 https://docs.github.com/en/get-started/quickstart/github-flow
+
+design: not full deployment automation, manual test on TST
+
+design: independent changes, in random order to production (ie. not release based)
