--- a/src/development.adoc
+++ b/src/development.adoc
@@ -7,3 +7,5 @@ development guidelines impact: packages, message classes, reduce size
 examples
 
 Technical Quality assurance & Functional Quality assurance
+
+image::img/foo.drawio.svg[]
