--- a/src/introduction.adoc
+++ b/src/introduction.adoc
@@ -12,7 +12,7 @@
 
 == Introduction
 
-link:https://abapgit.org[abapGit] flow is a end-to-end development and deployment process for SAP ABAP systems. It allows for a modern development process, with a focus on quality and speed, where feature can be deployed independently in any order.
+link:https://abapgit.org[abapGit] flow is a end-to-end development and deployment process for SAP ABAP systems. It allows for a modern development process, with a focus on quality and speed, where features can be deployed independently in any order.
 
 === Key Features
 
@@ -51,8 +51,9 @@ _todo, write Blog post about this_
 
 *Keeping the core moving*
 
-* towards the future
-* cleanup and refactoring
+Keep the core moving towards a better core, improving step by step, without big bang implementations.
+
+Safely refactor the core, without breaking existing functionality.
 
 *Editor independent*
 
@@ -66,6 +67,8 @@ Use any editor the developer is comfortable with, including:
 
 *AI ready*
 
+Get ready for AI powered development, by moving the ABAP code to git opens up for new possibilities, such as:
+
 * link:https://github.com/features/copilot[GitHub Copilot]
 * link:https://github.blog/2023-03-22-github-copilot-x-the-ai-powered-developer-experience/[GitHub Copilot X]
 * link:https://githubnext.com/projects/copilot-workspace/[GitHub Copilot Workspace]
@@ -73,14 +76,13 @@ Use any editor the developer is comfortable with, including:
 
 === Key Design Decisions
 
-design: not full deployment automation, manual test on TST
-can be adjusted to customer scenario
+The default setup described in this document includes the following design decisions:
 
-design: independent changes, in random order to production (ie. not release based)
+1. Changes can be moved independently to production, in any order using classic CTS
+2. SAP ABAP system initiates all communication, no Cloud -> On-prem connections
+3. GitHub Cloud is the central repository
+4. No fully automated deployment to production after the development is done, each feature is manually tested or requires manual approval before moving to production
 
-design: SAP system initiates all communication, no Cloud -> On-prem connections
-
-design: using github as the central repository
-can be adjusted to customer scenario
+However, the design can be adjusted to fit the needs of the customer, and the existing tools and processes.
 
 For product/add-on development which is typically released as a whole, instead of per feature, see whitepaper link:https://docs.heliconialabs.com/abap-product-development.pdf[ABAP Product Development].
