--- a/src/deployment.adoc
+++ b/src/deployment.adoc
@@ -19,3 +19,7 @@ rollback feature
 txn `/SDF/TRCHECK`
 
 badi `CTS_REQUEST_CHECK`, `CHECK_BEFORE_RELEASE`
+
+finding possible sequence issues early => abaplint.app feature
+
+irreversible changes, eg. DDIC => abaplint.app feature / warning
